added styles for landing page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   <script defer src="./app.js"></script>
   <title>Double's Trouble</title>
 </head>
 <body id="landingBody">
   <section class="landingPage">
     <div class="landingHead">
-      <h1 class="landingTitle">DOUBLES TROUBLE</h1>
+      <h1 class="landingTitle">Doubles Trouble</h1>
     </div>
     <div class="button">
       <a href="./game.html">
