started game board layout

--- a/game.html
+++ b/game.html
@@ -9,7 +9,50 @@
   <title>Double's Trouble</title>
 </head>
 <body>
-  <a href="./index.html">HOME</a>
+  <section class="gameBoard">
+    <section class="redSide">
+      <div class="start" id="redStart">
+        <section class="pegs">
+          <div class="redPegs" id="redPeg1"></div>
+          <div class="redPegs" id="redPeg2"></div>
+          <div class="redPegs" id="redPeg3"></div>
+        </section>
+      </div>
+      <div class="safe" id="blueSafe"></div>
+    </section>
+    <section class="playArea">
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+      <div class="boardBlocks"></div>
+    </section>
+    <section class="blueSide">
+      <div class="start" id="blueStart">
+        <section class="pegs">
+          <div class="bluePegs" id="bluePeg1"></div>
+          <div class="bluePegs" id="bluePeg2"></div>
+          <div class="bluePegs" id="bluePeg3"></div>
+        </section>
+      </div>
+      <div class="safe" id="redSafe"></div>
+    </section>
+  </section>
+  <button class="gameBtns">1 player</button>
+  <button class="gameBtns">2 Player</button>
+
+  <button class="homeBtn"><a href="./index.html">HOME</a></button>
   
 </body>
 </html>
