--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="gameRules">
       <h3 class="landingGameRules">Game Rules</h3>
       <ul>
-        <li class="rules">Lets say Red player rolls the die first</li>
-        <li class="rules">Choose a dot to move, it will move the amount of spaces you rolled</li>
-        <li class="rules">Blue players rolls and moves their dot</li>
-        <li class="rules"> If a player lands on a space with the opponents dot, the opponents dot is moved back to the start and the player takes over that position</li>
+        <li class="rules">Lets say Red player rolls the die first.</li>
+        <li class="rules">Choose a dot to move, it will move the amount of spaces you rolled.</li>
+        <li class="rules">Blue players rolls and moves their dot.</li>
+        <li class="rules"> If a player lands on a space with the opponents dot, the opponents dot is moved back to the start and the player takes over that position.</li>
         <li class="rules">First to move all 3 dots to their opponents end of the board wins!!</li>
     </ul>
     </div>
