finished initial gameboard setup

--- a/game.html
+++ b/game.html
@@ -8,8 +8,8 @@
   <script defer src="./app.js"></script>
   <title>Double's Trouble</title>
 </head>
-<body>
-  <section class="gameBoard">
+<body id="gameBody">
+  <div class="gameBoard">
     <section class="redSide">
       <div class="start" id="redStart">
         <section class="pegs">
@@ -48,11 +48,10 @@
       </div>
       <div class="safe" id="redSafe"></div>
     </section>
-  </section>
+  </div>
   <button class="gameBtns">1 player</button>
   <button class="gameBtns">2 Player</button>
 
   <button class="homeBtn"><a href="./index.html">HOME</a></button>
-  
 </body>
 </html>
