added announcement and dice space

--- a/game.html
+++ b/game.html
@@ -53,7 +53,8 @@
     </section>
   </div>
   <section class="bottomPanel">
-    <div class="announcements"></div>
+    <div class="announcements">Who's in Trouble?</div>
+    <div class="dice"></div>
     <button class="gameBtns">Roll!!</button>
     <button class="gameBtns">Play!!</button>
   </section>
