--- a/game.html
+++ b/game.html
@@ -26,22 +26,22 @@
       <div class="safe" id="blueSafe"></div>
     </section>
     <section class="playArea">
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
-      <div class="boardBlocks"></div>
+      <div class="boardBlocks" id="b0"></div>
+      <div class="boardBlocks" id="b1"></div>
+      <div class="boardBlocks" id="b2"></div>
+      <div class="boardBlocks" id="b3"></div>
+      <div class="boardBlocks" id="b4"></div>
+      <div class="boardBlocks" id="b5"></div>
+      <div class="boardBlocks" id="b6"></div>
+      <div class="boardBlocks" id="b7"></div>
+      <div class="boardBlocks" id="b8"></div>
+      <div class="boardBlocks" id="b9"></div>
+      <div class="boardBlocks" id="b10"></div>
+      <div class="boardBlocks" id="b11"></div>
+      <div class="boardBlocks" id="b12"></div>
+      <div class="boardBlocks" id="b13"></div>
+      <div class="boardBlocks" id="b14"></div>
+      <div class="boardBlocks" id="b15"></div>
     </section>
     <section class="blueSide">
       <div class="start" id="blueStart">
@@ -54,9 +54,9 @@
   </div>
   <section class="bottomPanel">
     <div class="announcements">Who's in Trouble?</div>
-    <div class="dice"></div>
-    <button class="gameBtns">Roll!!</button>
-    <button class="gameBtns">Play!!</button>
+    <div class="dice">0</div>
+    <button class="gameBtns" id="rollBtn">Roll!!</button>
+    <button class="gameBtns" id="playBtn">Play!!</button>
   </section>
   </section>
  
