--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="button">
       <a href="./game.html">
-        <button id="playBtn">Let's Play</button>
+        <button id="startBtn">Let's Play</button>
       </a>
     </div>
     <div class="gameRules">
