--- a/game.html
+++ b/game.html
@@ -16,37 +16,31 @@
     </nav>
   <h1 class="gameHead">Doubles Trouble</h1>
   <div class="gameBoard">
-    
     <section class="redSide">
       <div class="start" id="redStart">
-          <div class="redPegs" id="redPeg1"></div>
-          <div class="redPegs" id="redPeg2"></div>
-          <div class="redPegs" id="redPeg3"></div>
+          <div id="redPeg"></div>
       </div>
       <div class="start" id="blueStart">
-        <div class="bluePegs" id="bluePeg1"></div>
-        <div class="bluePegs" id="bluePeg2"></div>
-        <div class="bluePegs" id="bluePeg3"></div>
+        <div id="bluePeg"></div>  
     </div>
-      
     </section>
     <section class="playArea">
-      <div class="boardBlocks" id="b0"></div>
-      <div class="boardBlocks" id="b1"></div>
-      <div class="boardBlocks" id="b2"></div>
-      <div class="boardBlocks" id="b3"></div>
-      <div class="boardBlocks" id="b4"></div>
-      <div class="boardBlocks" id="b5"></div>
-      <div class="boardBlocks" id="b6"></div>
-      <div class="boardBlocks" id="b7"></div>
-      <div class="boardBlocks" id="b8"></div>
-      <div class="boardBlocks" id="b9"></div>
-      <div class="boardBlocks" id="b10"></div>
-      <div class="boardBlocks" id="b11"></div>
-      <div class="boardBlocks" id="b12"></div>
-      <div class="boardBlocks" id="b13"></div>
-      <div class="boardBlocks" id="b14"></div>
-      <div class="boardBlocks" id="b15"></div>
+      <div blockIndex="0" class="boardBlocks" id="b0"><div class="emptyBlock"></div></div>
+      <div blockIndex="1" class="boardBlocks" id="b1"><div class="emptyBlock"></div></div>
+      <div blockIndex="2" class="boardBlocks" id="b2"><div class="emptyBlock"></div></div>
+      <div blockIndex="3" class="boardBlocks" id="b3"><div class="emptyBlock"></div></div>
+      <div blockIndex="4" class="boardBlocks" id="b4"><div class="emptyBlock"></div></div>
+      <div blockIndex="5" class="boardBlocks" id="b5"><div class="emptyBlock"></div></div>
+      <div blockIndex="6" class="boardBlocks" id="b6"><div class="emptyBlock"></div></div>
+      <div blockIndex="7" class="boardBlocks" id="b7"><div class="emptyBlock"></div></div>
+      <div blockIndex="8" class="boardBlocks" id="b8"><div class="emptyBlock"></div></div>
+      <div blockIndex="9" class="boardBlocks" id="b9"><div class="emptyBlock"></div></div>
+      <div blockIndex="10" class="boardBlocks" id="b10"><div class="emptyBlock"></div></div>
+      <div blockIndex="11" class="boardBlocks" id="b11"><div class="emptyBlock"></div></div>
+      <div blockIndex="12" class="boardBlocks" id="b12"><div class="emptyBlock"></div></div>
+      <div blockIndex="13" class="boardBlocks" id="b13"><div class="emptyBlock"></div></div>
+      <div blockIndex="14" class="boardBlocks" id="b14"><div class="emptyBlock"></div></div>
+      <div blockIndex="15" class="boardBlocks" id="b15"><div class="emptyBlock"></div></div>
     </section>
     <section class="blueSide">
       <div class="safe" id="blueSafe"></div>
@@ -55,7 +49,7 @@
   </div>
   <section class="bottomPanel">
     <div class="announcements">Who's in Trouble?</div>
-    <div class="dice">0</div>
+    <div class="dice"></div>
     <button class="gameBtns" id="rollBtn">Roll!!</button>
     <button class="gameBtns" id="playBtn">Play!!</button>
   </section>
