still trying to get the pegs to move to the correct block

--- a/game.html
+++ b/game.html
@@ -49,7 +49,7 @@
   </div>
   <section class="bottomPanel">
     <div class="announcements">Who's in Trouble?</div>
-    <div class="dice"></div>
+    <div class="dice">''</div>
     <button class="gameBtns" id="rollBtn">Roll!!</button>
     <button class="gameBtns" id="playBtn">Play!!</button>
   </section>
