pegs move to index of block

--- a/game.html
+++ b/game.html
@@ -25,22 +25,22 @@
     </div>
     </section>
     <section class="playArea">
-      <div blockIndex="0" class="boardBlocks" id="b0"><div class="emptyBlock"></div></div>
-      <div blockIndex="1" class="boardBlocks" id="b1"><div class="emptyBlock"></div></div>
-      <div blockIndex="2" class="boardBlocks" id="b2"><div class="emptyBlock"></div></div>
-      <div blockIndex="3" class="boardBlocks" id="b3"><div class="emptyBlock"></div></div>
-      <div blockIndex="4" class="boardBlocks" id="b4"><div class="emptyBlock"></div></div>
-      <div blockIndex="5" class="boardBlocks" id="b5"><div class="emptyBlock"></div></div>
-      <div blockIndex="6" class="boardBlocks" id="b6"><div class="emptyBlock"></div></div>
-      <div blockIndex="7" class="boardBlocks" id="b7"><div class="emptyBlock"></div></div>
-      <div blockIndex="8" class="boardBlocks" id="b8"><div class="emptyBlock"></div></div>
-      <div blockIndex="9" class="boardBlocks" id="b9"><div class="emptyBlock"></div></div>
-      <div blockIndex="10" class="boardBlocks" id="b10"><div class="emptyBlock"></div></div>
-      <div blockIndex="11" class="boardBlocks" id="b11"><div class="emptyBlock"></div></div>
-      <div blockIndex="12" class="boardBlocks" id="b12"><div class="emptyBlock"></div></div>
-      <div blockIndex="13" class="boardBlocks" id="b13"><div class="emptyBlock"></div></div>
-      <div blockIndex="14" class="boardBlocks" id="b14"><div class="emptyBlock"></div></div>
-      <div blockIndex="15" class="boardBlocks" id="b15"><div class="emptyBlock"></div></div>
+      <div blockIndex="0" class="boardBlocks" id="b0"></div>
+      <div blockIndex="1" class="boardBlocks" id="b1"></div>
+      <div blockIndex="2" class="boardBlocks" id="b2"></div>
+      <div blockIndex="3" class="boardBlocks" id="b3"></div>
+      <div blockIndex="4" class="boardBlocks" id="b4"></div>
+      <div blockIndex="5" class="boardBlocks" id="b5"></div>
+      <div blockIndex="6" class="boardBlocks" id="b6"></div>
+      <div blockIndex="7" class="boardBlocks" id="b7"></div>
+      <div blockIndex="8" class="boardBlocks" id="b8"></div>
+      <div blockIndex="9" class="boardBlocks" id="b9"></div>
+      <div blockIndex="10" class="boardBlocks" id="b10"></div>
+      <div blockIndex="11" class="boardBlocks" id="b11"></div>
+      <div blockIndex="12" class="boardBlocks" id="b12"></div>
+      <div blockIndex="13" class="boardBlocks" id="b13"></div>
+      <div blockIndex="14" class="boardBlocks" id="b14"></div>
+      <div blockIndex="15" class="boardBlocks" id="b15"></div>
     </section>
     <section class="blueSide">
       <div class="safe" id="blueSafe"></div>
@@ -49,7 +49,7 @@
   </div>
   <section class="bottomPanel">
     <div class="announcements">Who's in Trouble?</div>
-    <div class="dice">''</div>
+    <div class="dice"></div>
     <button class="gameBtns" id="rollBtn">Roll!!</button>
     <button class="gameBtns" id="playBtn">Play!!</button>
   </section>
