roll, move, play buttons work

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     <div class="gameRules">
       <h3 class="landingGameRules">Game Rules</h3>
       <ul>
-        <li class="rules">Lets say Red player rolls the die first.</li>
-        <li class="rules">Choose a dot to move, it will move the amount of spaces you rolled.</li>
-        <li class="rules">Blue players rolls and moves their dot.</li>
+        <li class="rules">Red always starts the game.</li>
+        <li class="rules">Click "Roll!!" to see how far you can move.</li>
+        <li class="rules"> Click "Move!!" to move the amount of spaces you rolled.</li>
+        <li class="rules">Players Switch.</li>
+        <li class="rules">Blue player Rolls and Moves their dot.</li>
         <li class="rules"> If a player lands on a space with the opponents dot, the opponents dot is moved back to the start and the player takes over that position.</li>
-        <li class="rules">First to move all 3 dots to their opponents end of the board wins!!</li>
+        <li class="rules">First to move to the end of the board wins!!</li>
+        <li class="rules">Click "Play!!" to reset the board and play again.</li>
     </ul>
     </div>
   </section>
