--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <script defer src="./test.js"></script>
+  <script defer src="./app.js"></script>
   <title>Double's Trouble</title>
 </head>
 <body id="gameBody">
